# rust_the_book

./: .gitignore  Cargo.toml  PROJECTS.md
.devcontainer/: .bash_rust  Dockerfile  cas.pem  devcontainer.json
cheat_sheet/: Cargo.toml
guessing_game/src/: main.rs
hello_world/: Cargo.toml
proj_expr_calc/: Cargo.toml  TUTORIAL.md
proj_grep_threads/: Cargo.toml  TUTORIAL.md
proj_grep_threads/src/: main.rs
proj_grep_threads/testdata/: astronomy.txt  kitchen.txt  networking.txt  ocean.txt  weaving.txt
proj_iterkit/: Cargo.toml  TUTORIAL.md
proj_iterkit/src/: lib.rs
proj_kvstore/: .gitignore  Cargo.toml  TUTORIAL.md
proj_logscan/: Cargo.toml  TUTORIAL.md
proj_orgtree/: Cargo.toml  TUTORIAL.md
proj_skill_server/: Cargo.toml  TUTORIAL.md
proj_skill_server/skills/echo/: SKILL.md  skill.json
proj_skill_server/src/: main.rs
rb_1_2_hello_world/: Cargo.toml
rb_2_0_guessing_game/: Cargo.toml
rb_2_0_guessing_game/src/: main.rs
rb_3_1_variables/: Cargo.toml
rb_3_1_variables/src/: main.rs
rb_3_2_data_types/: Cargo.toml
rb_3_2_data_types/src/: main.rs
rb_3_3_functions/: Cargo.toml
rb_3_3_functions/src/: main.rs
rb_3_5_control_flow/: Cargo.toml
rb_4_1_ownership/: Cargo.toml
rb_4_1_ownership/src/: main.rs
rb_4_2_refs_borrow/rb_4_2_refs_borrow/: Cargo.toml
sig_nix/: Cargo.toml
sig_nix/src/: main.rs
sig_tokio/src/: main.rs
stl_ast_demo/: Cargo.toml
stl_ast_demo/src/: main.rs
stl_demo/: Cargo.toml  README.md
stl_demo/src/: main.rs
top_5_traits/: Cargo.toml
top_5_traits/src/: main.rs
trie/src/: main.rs
variables/src/: main.rs
web_server/: Cargo.toml
web_server/src/: handler.rs  req.rs
web_server/static/: index.html
x_axum_tokio_app_chans/: Cargo.toml  TUTORIAL.md
x_axum_tokio_app_chans/src/: main.rs
x_card_payment/: Cargo.toml
x_card_payment/src/: main.rs
x_csp_tokio/: Cargo.toml  TUTORIAL.md
x_csp_tokio/src/: main.rs
x_match_examples/: Cargo.toml
x_match_examples/src/: main.rs
x_sig_nix/src/: main.rs
x_sig_tokio/: Cargo.toml
x_stl_demo/src/: main.rs
x_stl_horizon_dichotomy/: Cargo.toml
x_stl_horizon_dichotomy/src/: main.rs
x_stl_rnn/: Cargo.toml
x_stl_rnn/src/: main.rs
x_threads_ownership_tokio/: Cargo.toml
x_threads_ownership_tokio/src/: main.rs
x_tokio_axum_cli_chans/: Cargo.toml
x_tokio_axum_cli_chans/src/: main.rs
x_tokio_canc/: Cargo.toml
x_tokio_cli_tutorial/: Cargo.toml  TUTORIAL.md
x_tokio_cli_tutorial/src/: main.rs
x_tokio_cli_tutorial/src/lessons/: blocking.rs  broadcast.rs  cancel.rs  echo.rs  join.rs  mod.rs  mpsc.rs  oneshot.rs  select.rs  select_stream.rs  selectchan.rs  shared_state.rs  signal.rs  spawn.rs  streams.rs  timers.rs  watch.rs
x_tokio_http_get/: Cargo.toml
x_tokio_http_get/src/: main.rs
x_top_5_traits/src/: main.rs
x_web_server/src/: main.rs
x_web_server_2/: Cargo.toml
x_web_server_async/: Cargo.toml
x_web_server_async/static/: about.html
(+8 files in other folders)
