[workspace]

members = [
    "rb_1_2_hello_world",
    "rb_2_0_guessing_game",
    "rb_3_1_variables",
    "rb_3_2_data_types",
    "rb_3_3_functions/rb_3_3_functions",
    "top_5_traits",
    "sig_tokio",
    "sig_nix",
    "trie",
    "web_server"    
, "rb_3_5_control_flow/rb_3_5_control_flow", "rb_4_1_ownership/rb_4_1_ownership", "rb_4_2_refs_borrow/rb_4_2_refs_borrow"]
