[workspace]
resolver = "3"

members = [
    "rb_1_2_hello_world",
    "rb_2_0_guessing_game",
    "rb_3_1_variables",
    "rb_3_2_data_types",
    "rb_3_3_functions",
    "rb_3_5_control_flow",
    "rb_4_1_ownership", 
    "rb_4_2_refs_borrow", 
    "x_stl_demo", 
    "x_stl_ast_demo",
    "x_top_5_traits",
    "x_sig_tokio",
    "x_sig_nix",
    "x_trie",
    "x_web_server", 
    "x_card_payment",
    ]
