[workspace]
resolver = "3"

members = [
    "rb_1_2_hello_world",
    "rb_2_0_guessing_game",
    "rb_3_1_variables",
    "rb_3_2_data_types",
    "rb_3_3_functions",
    "rb_3_5_control_flow",
    "rb_4_1_ownership", 
    "rb_4_2_refs_borrow", 
    "x_card_payment", 
    "x_sig_tokio",
    "x_stl_ast_demo",
    "x_stl_demo", 
    "x_stl_horizon_dichotomy", 
    "x_sig_nix",
    "x_stl_rnn", 
    "x_top_5_traits",
    "x_trie",
    "x_threads_ownership_tokio", 
    "x_tokio_canc",
    "x_tokio_axum_cli_chans",
    "x_tokio_http_get", 
    "x_web_server",
    "x_web_server_async", "x_tokio_cli_tutorial", "x_match_examples", "x_axum_tokio_app_chans",
    "x_csp_tokio",
    "proj_expr_calc",
    "proj_grep_threads",
    "proj_iterkit",
    "proj_kvstore",
    "proj_logscan",
    "proj_orgtree",
    "proj_skill_server",
    ]
