[package]
name = "x_tokio_axum_cli_chans"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.71"
axum         = "0.8"
clap         = { version = "4", features = ["derive", "env"] }
futures = "0.3.28"
maplit = "1.0.2"
tokio = { version = "1.28.0", features = ["full"] }
tokio-util = "0.7.8"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
