[package]
name = "x_tokio_cli_tutorial"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }   # add the derive feature
tokio = { version = "1.52.3", features = ["full"] }    # "full" while learning; trim later
tokio-stream = "0.1"
tokio-util = "0.7"